testsuite/tests/grammar/invalid_lkt/annotated_grammar_1.lkt
import lexer_example
import common

@with_lexer(foo_lexer) @foo grammar foo_grammar {
    @main_rule main_rule <- Example("example")
}
